Bug 279527 - text color in toolbar below playlist is always white even if background is light - not readable
Summary: text color in toolbar below playlist is always white even if background is li...
Status: RESOLVED FIXED
Alias: None
Product: amarok
Classification: Applications
Component: general (other bugs)
Version First Reported In: 2.7-git
Platform: Debian unstable Linux
: HI normal
Target Milestone: later
Assignee: Amarok Bugs
URL:
Keywords: usability
Depends on:
Blocks:
 
Reported: 2011-08-06 12:56 UTC by Janet
Modified: 2013-07-01 05:51 UTC (History)
3 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 2.8
Sentry Crash Report:
myriam: Usability+


Attachments
screenshot: text in toolbar not readable (338.56 KB, image/jpeg)
2011-08-06 12:58 UTC, Janet
Details
same background color in wikipedia module, text color black as it should be (305.71 KB, image/jpeg)
2011-08-06 12:59 UTC, Janet
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Janet 2011-08-06 12:56:58 UTC
Version:           2.4.3 (using KDE 4.6.5) 
OS:                Linux

Since Amarok 2.4.3 the text in the toolbar is just not readable when you use a light color theme for KDE. In every color theme I have tried the text in the toolbar below the playlist ist white. That's a very big problem because it is just not readable with a lot of color themes. All other text is black - and this one should adapt to the used color theme too. If the background color of that toolbar (I don't know where it takes its color from, it doesn't seem to appear in my color theme) is light - the text of it must be dark.

Astonishingly the background color used in that toolbar is also used in the Wikipedia module - and there the text on it is black, how it should be. This should also apply to the toolbar text, for the sake of usability and consistency.

Reproducible: Always

Steps to Reproduce:
Use a light color theme for KDE.


Expected Results:  
Either the text color and the background of the toolbar should respect the KDE colors or at least one of them should be configurable separately in amarok. The text must be readable with any color theme.

OS: Linux (i686) release 3.0-1.slh.2-aptosid-686
Compiler: gcc
Comment 1 Janet 2011-08-06 12:58:23 UTC
Created attachment 62618 [details]
screenshot: text in toolbar not readable
Comment 2 Janet 2011-08-06 12:59:23 UTC
Created attachment 62619 [details]
same background color in wikipedia module, text color black as it should be
Comment 3 Christoph Feck 2011-08-06 14:13:35 UTC
Looks like someone didn't understand KColorScheme ;)
Comment 4 Myriam Schweingruber 2011-08-07 10:45:32 UTC
That is not the toolbar, but the replacement for the status bar.

Bart, could you please look into this?
Comment 5 Janet 2011-08-07 22:25:44 UTC
This "replacement for the status bar" seems to use the foreground color for the selected text but at the same time does *not* use the background color for the  selected text. When the color theme is light plus the background color for the selected text is dark and the foreground color for the selected text therefore is light in the theme - then amarok has a problem (i.e. its user). The background color for the status bar replacement bar is some mixture of some other color settings?
Comment 6 Christoph Feck 2011-08-08 00:18:20 UTC
Re-add CC members that got lost with last change.
Comment 7 Myriam Schweingruber 2011-08-08 21:43:18 UTC
(In reply to comment #6)
> Re-add CC members that got lost with last change.

Why? I removed them as they are not maintaining this at all, so there is no point to subscribe them, instead subscribing the developer actually handling the code makes much more sense.
Comment 8 Christoph Feck 2011-08-09 09:46:36 UTC
> Why?

Sorry, I forgot to read the activity backlog, just assumed they had added themselves to this bug.
Comment 9 Myriam Schweingruber 2012-02-13 16:17:11 UTC
Still valid with current git, very annoying, there should be more contrast here.
Comment 10 Thomas Pfeiffer 2013-04-11 11:05:52 UTC
From the usability perspective, the situation is clear: If text in an application is not readable in certain color schemes (unless the scheme itself is broken), we have a bug that should be fixed by using the color scheme correctly.
Comment 11 Janet 2013-04-12 12:01:21 UTC
I tested it with a lot of different color themes and it seems to be ok for most themes now. There are very few for which the contrast between background and text color isn't optimal because the color for the selected background seems a little lightened in that bar. Might be considered as fixed?
Comment 12 Mark Kretschmann 2013-07-01 05:51:12 UTC
Git commit 8d3faf37cc2283e5d4038e864adb2343961f1470 by Mark Kretschmann.
Committed on 01/07/2013 at 05:46.
Pushed by markey into branch 'master'.

Text color in toolbar below playlist is no longer always white.

Patch by Ricardo Varas <ricardoivaras@gmail.com>.
FIXED-IN: 2.8
REVIEW: 111334

Thanks for the patch, Ricardo :)

Now, if you could also figure out how to make the text stick less
close to the right border, that'd be gold.

M  +1    -1    src/playlist/PlaylistDock.cpp

http://commits.kde.org/amarok/8d3faf37cc2283e5d4038e864adb2343961f1470