Text color in toolbar below playlist is no longer always white.

Patch by Ricardo Varas <ricardoivaras@gmail.com>.

BUG: 279527
FIXED-IN: 2.8
REVIEW: 111334

Thanks for the patch, Ricardo :)

Now, if you could also figure out how to make the text stick less
close to the right border, that'd be gold.